# DronecodeSDK

example/: CMakeLists.txt
example/battery/: CMakeLists.txt
example/calibrate/: CMakeLists.txt
example/fly_mission/: CMakeLists.txt
example/fly_qgc_mission/: CMakeLists.txt  fly_qgc_mission.cpp  gtkmm_buttons.hpp
example/follow_me/: CMakeLists.txt
example/multiple_drones/: CMakeLists.txt  multiple_drones.cpp
example/offboard_velocity/: CMakeLists.txt
example/takeoff_land/: takeoff_and_land.cpp
example/testDrones/: CMakeLists.txt  gtkmm_buttons.hpp  testDrones.cpp
example/transition_vtol_fixed_wing/: CMakeLists.txt
integration_tests/: mission.cpp
plugins/mission/: lessNodes.plan  north.plan  south.plan  south2.plan  test.plan  test1.plan  test2.plan
testDrones/: gtkmm_buttons.hpp  testDrones.cpp
